<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CountryListFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/choose_country_text"
           android:layout_marginTop="15dp"
           android:text="@string/choose_country_text"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/id_column_name"
           android:text="@string/country_id"
           app:layout_constraintTop_toBottomOf="@id/choose_country_text"
           android:layout_marginTop="10dp"
           app:layout_constraintStart_toStartOf="parent"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/country_name_column_name"
           android:text="@string/country_name"
           app:layout_constraintTop_toTopOf="@id/id_column_name"
           app:layout_constraintStart_toEndOf="@id/id_column_name"
           app:layout_constraintEnd_toStartOf="@id/country_iso2_column_name"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/country_iso2_column_name"
           android:text="@string/country_iso2"
           app:layout_constraintTop_toTopOf="@id/id_column_name"
           app:layout_constraintEnd_toEndOf="parent"/>

       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/country_recycler_view"
           app:layout_constraintTop_toBottomOf="@id/id_column_name"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>