<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_flag"
        android:id="@+id/question"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country_flag"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="200sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/country_flag"
        android:id="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/country_flag"
        android:id="@+id/button_2"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        android:id="@+id/button_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_4"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        android:id="@+id/button_4"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:layout_margin="2dp"
        android:id="@+id/button_discover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        android:background="@color/purple_500"
        android:src="@drawable/travel_explore_fill0_wght400_grad0_opsz48"
        android:contentDescription="@string/button_discover"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:layout_margin="2dp"
        android:id="@+id/button_play"
        android:contentDescription="@string/Button_play"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray"
        android:src="@drawable/game_controller_outline"
        app:layout_constraintStart_toEndOf="@id/button_discover"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:id="@+id/correct_answer_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationZ="10dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_answer"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="50sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:id="@+id/wrong_answer_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationZ="10dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/wrong"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correction"
            android:textSize="20sp"
            android:id="@+id/answer_title"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/wrong"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/answer"
            android:layout_below="@id/answer_title"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>